syntax = "proto3";

package iamnande.cardmod.limitbreak.v1;

import "iamnande/cardmod/limitbreak/v1/limitbreak.proto";
import "validate/validate.proto";

option go_package = "github.com/iamnande/cardmod/pkg/api/limitbreakv1;limitbreakv1";

// LimitBreak API Service.
service LimitBreakAPI {

    // Gets a limitbreak.
    rpc GetLimitBreak(GetLimitBreakRequest) returns (LimitBreak);

    // Lists a collection of limitbreaks.
    rpc ListLimitBreaks(ListLimitBreaksRequest) returns (ListLimitBreaksResponse);

}

// Request schema for the GetLimitBreak request.
message GetLimitBreakRequest {

    // Name of the limitbreak to get.
    string name = 1 [(validate.rules).string = {
        pattern: "^[-, \\w]+$",
        min_len: 3,
        max_len: 25,
    }];

}

// Request schema for the ListLimitBreaks request.
message ListLimitBreaksRequest {}

// Response schema for the ListLimitBreaks request.
message ListLimitBreaksResponse {

    // The collection of limitbreaks
    repeated LimitBreak limitbreaks = 1;

}